@@ -1,5 +1,7 @@
 1.4.3 - TBD
 
+* Improved error handling for skymap loading.
+    * Added -f option to ignore headless skymap loading errors.
 * Fixed incorrect top texture for inverted daylight sensors.
 * Added rendering for Minecraft 1.12 blocks:
     * Glazed Terracotta
